Fix nowrap to wrap and text for key value pairs - features

--- a/client/src/styles/components/tooltip.scss
+++ b/client/src/styles/components/tooltip.scss
@@ -66,7 +66,6 @@
   font-weight: 500;
   color: #222;
   font-size: 0.75rem;
-  white-space: nowrap;
 }
 
 .feature-value {
